# DiscordoCode

./: .gitignore  CMakeLists.txt  CONFIG.h  ClientMain.cpp  DiscordoClient.cpp  DiscordoClient.h  README.md  ServerMain.cpp  TestHandler.h  TextChannel.cpp  TextChannel.h  User.cpp  User.h  main.cpp
.run/: DiscordoClient.run.xml  DiscordoServer.run.xml
BigNum/: BigNum.h
Client/: Client.h  ClientHandler.h  main.cpp
General/BigNum/: BigNum.h
General/Networking/: Message.h
Networking/: Client.h  ClientHandler.h  CustomMessages.cpp  CustomMessages.h  Handlers.h  Message.h  Server.h  ServerHandler.h
Networking/Handlers/: Authentication.cpp  LogIn.cpp  Registration.cpp  TextHandler.cpp
Random-Gen/: Random.cpp  Random.h
Server/: Server.h  ServerHandler.h  main.cpp
Testing/: Test.cpp  Test.h
